# dice-roll

./: README.md  pyproject.toml
src/dice-roll/: dice-roll.py
