[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dice-roll"
version = "0.0.1"
authors = [
    {name="Kallen Murphy"}
]
description = "A basic cli dice roller"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires = [
    "typer >= 0.9.0",
    "rich >= 13.7.0"
]

[project.urls]
Homepage = "https://github.com/mlebbleb/dice-roll"

[project.scripts]
dice-roll = "dice-roll.dice-roll:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dice-roll"]
